--- a/src/components/Navbar/css/navbar.scss
+++ b/src/components/Navbar/css/navbar.scss
@@ -7,56 +7,77 @@ i {
 /*----------multi-level-accordian-menu------------*/
 .navbar-logo {
   padding: 15px;
-  color: #fff;
+  color: $text-color;
 }
 
 .navbar-mainbg {
   padding: 0;
   background-color: $navbar-color;
 }
-.navbar-btn {
-  position: relative;
-  margin-right: 10px;
-  width: 30px;
-  height: 30px;
-  .hamb-top {
-    position: absolute;
-    left: 0;
-    top: 5px;
-    width: 100%;
-    height: 3px;
-    background-color: rgba(255, 255, 255, 0.7);
-    transition: all 0.35s ease-in-out;
-  }
-  .hamb-middle {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    margin-top: -2px;
-    width: 100%;
-    height: 3px;
-    background-color: rgba(255, 255, 255, 0.7);
+.menu-toggle {
+  border: none;
+  width: 3rem;
+  height: 3rem;
+  background-color: $navbar-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.125s ease;
+
+  &.clicked {
+    outline: 0;
+    background-color: $navbar-color;
+    span {
+      background-color: $text-color;
+      transform: rotate(45deg);
+      &:before {
+        background-color: $text-color;
+        transform: rotate(90deg) translate(-1rem);
+      }
+
+      &:after {
+        background-color: $text-color;
+        transform: rotate(90deg) translate(1rem);
+        opacity: 0;
+      }
+    }
   }
 
-  .hamb-bottom {
-    position: absolute;
-    left: 0;
-    bottom: 5px;
-    width: 100%;
-    height: 3px;
-    background-color: rgba(255, 255, 255, 0.7);
-    transition: all 0.35s ease-in-out;
-  }
-}
-.navbar-btn:hover {
-  .hamb-top {
-    top: 2px;
-  }
-  .hamb-bottom {
-    bottom: 2px;
+  span {
+    display: block;
+    width: 2.55rem;
+    height: 0.275rem;
+    border-radius: 99em;
+    background-color: $text-color;
+    transition: 0.5s ease;
+    position: relative;
+    &:before,
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      background-color: $text-color;
+      border-radius: 99em;
+      transition: 0.5s ease;
+    }
+
+    &:before {
+      top: 1rem;
+    }
+
+    &:after {
+      bottom: 1rem;
+    }
   }
 }
 
+:focus {
+  outline: 0;
+}
 #navbarSupportedContent {
   overflow: hidden;
   position: relative;
